add admin, fix layout

--- a/PRN221_Project/ArtTattooProject/appsettings.json
+++ b/PRN221_Project/ArtTattooProject/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ArtTattooLover": "Server=(local);uid=sa;pwd=12345;database=ArtTattooLover;TrustServerCertificate=True"
+    "ArtTattooLover": "Server=(local);uid=sa;pwd=12345;database=ArtTattooLover;TrustServerCertificate=True",
+  },
+  "Admin": {
+    "username": "admin",
+    "password": "admin"
   }
 }
