--- a/PRN221_Project/Repositories/appsettings.json
+++ b/PRN221_Project/Repositories/appsettings.json
@@ -8,6 +8,6 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "ArtTattooLoverDB": "Server=(local);uid=sa;pwd=12345;database=ArtTattooLover;TrustServerCertificate=True"
+    "ArtTattooLover": "Server=(local);uid=sa;pwd=12345;database=ArtTattooLover;TrustServerCertificate=True"
   }
 }
